# experiments

./: LICENSE  README.md
.github/workflows/: publish.yml  push.yml
json-builder-macro/: Cargo.toml  lib.rs
shell-language/: Cargo.toml
shell-language/examples/: concatenate.sh  date.sh  echo_run.sh  example1.sh  example2.sh  example3.sh  example4.sh  files.sh  files_conditional.sh  iteration.sh  numbers.sh  regexp.sh  stdout_stderr.sh  with.sh
shell-language/src/: main.rs
simple-http-requester/: Cargo.toml  lib.rs
simple-http-server/: Cargo.toml  lib.rs
simple-http-server/examples/: hello.rs
slides-tool/: Cargo.toml  main.rs
slides-tool/include/: slides.css  slides.js
specification-tool/: Cargo.toml
specification-tool/src/: lib.rs  main.rs
stdout-stderr-utilities/: Cargo.toml  lib.rs
str-utilities/: Cargo.toml  lib.rs
