[package]
name = "shell-language"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["date", "regular-expressions"]
date = ["dep:jiff"]
regular-expressions = ["dep:regress"]

[dependencies]
glob = "0.3.2"
jiff = { version = "0.2.14", optional = true }
regress = { version = "0.10.3", optional = true }

[lints.clippy]
pedantic = "deny"
